# bluefox2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  VideoCapture.cpp  VideoSample.cpp  blueflow.cpp  bluefox_capture.cpp  bluefox_test.cpp  cmake_install.cmake  main.cpp  octave-workspace  px4flow.cpp
bluefox/: bluefox2.cpp  bluefox2.h  bluefox2_setting.cpp  bluefox2_setting.h  flow.cpp  flow.h  gridcounter.cpp  gridcounter.h
cmake/: FindmvIMPACT.cmake
mvIMPACT_doc/html/: _capture_thread_8h_source.html  _data_conversion_8h_source.html  _data_grid_8h_source.html  _debug_file_parser_8h_source.html  _dev_ctrl_8h_source.html  _dev_data_8h_source.html  _device_configure_frame_8h_source.html  _device_handler_8h_source.html  _device_handler_blue_device_8h_source.html  _device_handler_blue_f_o_x_8h_source.html  _device_handler_h_y_p_e_r_i_o_n_8h_source.html  _device_list_ctrl_8h_source.html  _drawing_canvas_8h_source.html  _epcs_8h_source.html  _expat_impl_8h_source.html  _histogram_canvas_8h_source.html  _histogram_canvas_pixel_8h_source.html  _histogram_canvas_spatial_noise_8h_source.html  _histogram_canvas_temporal_noise_8h_source.html  _image_analysis_plot_controls_8h_source.html  _image_canvas_8h_source.html  _info_8h_source.html  _kernel_driver_update_8h_source.html  _line_profile_canvas_8h_source.html  _line_profile_canvas_horizontal_8h_source.html  _line_profile_canvas_vertical_8h_source.html  _log_output_configuration_dlg_8h_source.html  _log_output_handler_dlg_8h_source.html  _object_factory_8h_source.html  _p_g_m_file_functions_8h_source.html  _package_description_parser_8h_source.html  _plot_canvas_8h_source.html  _plot_canvas_image_analysis_8h_source.html  _plot_canvas_info_8h_source.html  _plot_canvas_intensity_8h_source.html  _prop_data_8h_source.html  _prop_grid_frame_base_8h_source.html  _prop_tree_8h_source.html  _prop_view_callback_8h_source.html  _prop_view_frame_8h_source.html  (+2505 more)
mvIMPACT_doc/latex/: annotated.tex  class_assign_settings_to_displays_dlg.tex  class_assign_settings_to_displays_dlg__coll__graph.md5  class_binary_data_dlg.tex  class_binary_data_dlg__coll__graph.md5  class_c_epcs.tex  class_c_expat.tex  class_c_expat__inherit__graph.md5  class_c_expat_impl.tex  class_c_time.tex  class_c_timeout.tex  (+1025 more)
(+494 files in other folders)
